--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -7,11 +7,16 @@ main {
 	}
 	.editBox {
 		padding: 1.5em;
+		.error {
+			color: red;
+			font-weight: bold;
+		}
 		textarea {
 			resize: none;
+			overflow-x: scroll;
 			padding: 10px;
 			width: 100%;
-			height: 25em;
+			height: 20em;
 		}
 	}
 	.display {
@@ -27,6 +32,9 @@ main {
 			position: absolute;
 			right: 25px;
 			top: 25px;
+			#close {
+				display: none;
+			}
 		}
 
 	}
@@ -35,7 +43,9 @@ main {
 			display: block;
 		}
 		.controls {
-			display: none;
+			#close {
+				display: inline;
+			}
 		}
 		article {
 			display: none;
